# grok-build

./: README.md  SOURCE_REV
.github/workflows/: build-macos.yml
crates/codegen/xai-fast-worktree/src/: api.rs  discovery.rs
crates/codegen/xai-grok-config/src/: lib.rs  loader.rs  managed_cache.rs  paths.rs
crates/codegen/xai-grok-config/src/managed_cache/: tests.rs
crates/codegen/xai-grok-env/: Cargo.toml
crates/codegen/xai-grok-env/src/: lib.rs
crates/codegen/xai-grok-hooks/src/runner/: http.rs
crates/codegen/xai-grok-memory/: Cargo.toml
crates/codegen/xai-grok-memory/src/: embedding.rs  storage.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/: Cargo.toml
crates/codegen/xai-grok-pager-minimal/src/: auth.rs  live.rs  overlay.rs
crates/codegen/xai-grok-pager-render/: Cargo.toml
crates/codegen/xai-grok-pager-render/src/: link_opener.rs  prompt_images.rs
crates/codegen/xai-grok-pager-render/src/clipboard/: mod.rs
crates/codegen/xai-grok-pager-render/src/gboom/: game.rs  mod.rs
crates/codegen/xai-grok-pager-render/src/render/: osc8.rs
crates/codegen/xai-grok-pager-render/src/terminal/: image.rs  keyboard.rs  mod.rs  test.rs
crates/codegen/xai-grok-pager-render/src/theme/: cache.rs  system_appearance.rs
crates/codegen/xai-grok-pager/docs/user-guide/: 14-headless-mode.md
crates/codegen/xai-grok-pager/src/: headless.rs  tracing.rs
crates/codegen/xai-grok-pager/src/app/: actions.rs  agent.rs  app_view.rs  event_loop.rs  mod.rs  mouse.rs
crates/codegen/xai-grok-pager/src/app/acp_handler/: session_notification.rs
crates/codegen/xai-grok-pager/src/app/agent_view/: interactions.rs  links.rs  mod.rs  notices.rs  panes.rs  render.rs  session.rs
crates/codegen/xai-grok-pager/src/app/dispatch/: billing.rs  ctx.rs  router.rs
crates/codegen/xai-grok-pager/src/app/dispatch/tests/: billing.rs
crates/codegen/xai-grok-pager/src/minimal/: api.rs
crates/codegen/xai-grok-pager/src/scrollback/: link_map.rs  render.rs  types.rs
crates/codegen/xai-grok-pager/src/scrollback/blocks/tool/: edit.rs  read.rs
crates/codegen/xai-grok-pager/src/scrollback/state/: mod.rs
crates/codegen/xai-grok-pager/src/slash/: registry.rs
crates/codegen/xai-grok-pager/src/views/: btw_overlay.rs
crates/codegen/xai-grok-pager/src/views/settings_modal/: input.rs  mod.rs  render.rs  state.rs  tests.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell-base/: Cargo.toml
crates/codegen/xai-grok-shell-base/src/: env.rs
crates/codegen/xai-grok-shell-base/src/util/: mod.rs
crates/codegen/xai-grok-shell/src/: managed_config.rs
crates/codegen/xai-grok-shell/src/agent/: chat_modes.rs  config.rs
crates/codegen/xai-grok-shell/src/agent/mvp_agent/: mod.rs  session_lifecycle.rs  tests.rs
crates/codegen/xai-grok-shell/src/agent/subagent/: handle_request.rs
crates/codegen/xai-grok-shell/src/auth/: config.rs  manager.rs  manager_tests.rs
crates/codegen/xai-grok-shell/src/config/: mod.rs
crates/codegen/xai-grok-shell/src/extensions/: chat_conversation_history.rs
crates/codegen/xai-grok-shell/src/leader/: server.rs
crates/codegen/xai-grok-shell/src/managed_config/: response.rs  tests.rs
crates/codegen/xai-grok-shell/src/session/: slash_commands.rs
crates/codegen/xai-grok-shell/src/session/acp_session_impl/: spawn.rs  tool_calls.rs
crates/codegen/xai-grok-shell/src/session/unified_list/: mod.rs
crates/codegen/xai-grok-shell/tests/: team_managed_config.rs  test_built_binary_e2e.rs
crates/codegen/xai-grok-tools/: Cargo.toml
crates/codegen/xai-grok-tools/src/registry/: types.rs
crates/codegen/xai-grok-version/: Cargo.toml
crates/codegen/xai-grok-voice/src/: config.rs
crates/codegen/xai-grok-workspace/: Cargo.toml
crates/codegen/xai-grok-workspace/src/: daemonize.rs  diag_server.rs  handle.rs  hub.rs  workspace_ops.rs
crates/codegen/xai-grok-workspace/src/foreign_sessions/capability/: mod.rs
crates/codegen/xai-grok-workspace/src/foreign_sessions/codex/tests/: db.rs
crates/codegen/xai-grok-workspace/src/session/: checkpoint.rs  tool_config.rs
